fix: fix spacing, mobile view and improved grammar

--- a/portfolio/src/app/component/edu-card/edu-card.component.scss
+++ b/portfolio/src/app/component/edu-card/edu-card.component.scss
@@ -1,6 +1,9 @@
 @use '../../../variables' as vars;
 
 .card{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
     border: 1px solid rgba(139, 92, 246, 0.2);
     padding: 1rem;
     border-radius: 8px;
