--- a/portfolio/src/app/component/experince-card/experince-card.component.scss
+++ b/portfolio/src/app/component/experince-card/experince-card.component.scss
@@ -1,11 +1,15 @@
 @use '../../../variables' as vars;
 
 .card{
+    display: flex;
+    flex-direction: column;
     border: 1px solid rgba(139, 92, 246, 0.2);
     padding: 1rem;
     border-radius: 8px;
     margin-bottom: 1rem;
     border: 1px solid rgba(139, 92, 246, 0.2);
+    gap: 1rem;
+
 }
 
 
@@ -24,6 +28,9 @@
         align-items: flex-start;
         gap: 0.5rem;
         
+    }
+    > * {
+        padding: 0.2rem;
     }
 }
 
@@ -46,6 +53,11 @@
 
 h2{
     color: vars.$main-purple;
+
+}
+
+h2,h3{
+    margin: 0;
 }
 
 .job-misc{
@@ -55,6 +67,10 @@ h2{
 
 .date{
     color: vars.$text-green
+}
+
+ul{
+    margin-top: 0.5rem;
 }
 
 li::marker {
